--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bech32",
+  "name": "bech32-js-tdcoin",
   "version": "1.1.3",
   "description": "Bech32 encoding / decoding",
   "keywords": [
@@ -27,7 +27,7 @@
     "tap-dot": "*"
   },
   "repository": {
-    "url": "http://github.com/bitcoinjs/bech32",
+    "url": "http://github.com/tatdig/bech32-js-tdcoin",
     "type": "git"
   },
   "scripts": {
